main.css
button:hover {
  opacity: 75%;
  border: 1px solid var(--color-main);
}

button {
  border-radius: 0.2rem;
  margin: 0.2rem;
  border: 1px solid transparent;
}

.copy-code {
  align-self: flex-end;
  background-color: initial;
  border-radius: 0;
  margin: .2rem;
}

input {
  padding: .3rem;
  margin: auto;
}

.publication-date {
  font-style: italic;
  color: var(--color-less-important);
}

.article-title {
  display: inline-flex;
  justify-content: space-between;
  width: 100%;
  align-items: center;
}

.article-prelude {
  display: inline-flex;
  justify-content: space-between;
  width: 100%;
}

p {
  padding: .5rem;
}

#banner {
  background-color: var(--color-banner-bg);
  display: inline-flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.code-header {
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--color-banner-bg);
  align-self: stretch;
  color: var(--color-main);
  padding: 0 .2rem;
}

#banner > ul {
  list-style: none;
  padding: 0 .5rem;
  display: inline-flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: .5rem;
  margin: 0;
}

#banner > ul > li {
  display: inline-flex;
  align-items: center;
  margin: 0;
}


#banner li a {
  text-decoration: none;
  border-radius: 8px;
  border: 15px;
  padding: 0;
  display: inline-block;
  padding: .2rem;
}

#banner > ul > li > a > svg {
  width: 2rem;
  height: 2rem;
}

#me {
  border-radius: 231px;
  padding: .5rem;
  width: 3rem;
  height: 3rem;
  margin-right: 1rem;
}

#pseudo-body, #search-matches {
  padding-inline: clamp(0.5rem, 3vw, 2rem);
  padding: clamp(0.5rem, 3vw, 2rem);
  padding-block: 0.5rem;
  margin-inline: auto;
}

.articles > ul {
  list-style: none;
  width: 100%;
  padding: 0;
}

.articles > ul > li {
  display: inline-flex;
  align-items: center;
  width: 100%;
  flex-wrap: wrap;
}

.home-link {
  margin-right: 1rem;
}


.tag {
  border-radius: 10px;
  background-color: var(--color-banner-bg);
  padding: 0.1rem 0.5rem;
  color: var(--color-main);
  text-decoration: none;
  margin: .2rem;
}

.tags {
  display: inline-flex;
  flex-wrap: wrap;
  flex-shrink: 5;
}

.date {
  color: var(--color-less-important);
}

#name {
  font-weight: bolder;
  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
}

figure {
  width: 100%;
  margin: 0;
}

figure > figcaption {
  text-align: center;
}

img, video {
  width: 100%;
  max-width: 1200px;
  display: block;
  margin: 0 auto;
}

hr {
  max-width: 30%;
  margin-top: 3rem;
  margin-bottom: 3rem;
}

body {
  margin: 0;
  font-family: monospace, sans-serif;
  margin-bottom: 5rem;
  font-size: 1rem;
  tab-size: 2;

  color-scheme: light dark;
  /* Most colors are from gruvbox: https://github.com/morhetz/gruvbox/tree/master . */
  --color-less-important: #928374;
  --color-banner-bg: #FB8C00;
  --color-main: light-dark(#1d2021, white);
  --color-main-bg: light-dark(white, #1d2021);
  --color-code-bg: light-dark(#fbf1c7, #282828);

  /* --color-link: light-dark(#7c6f64, #a89984);*/
  --color-link: light-dark(#076678, #83a598);
  --color-link-hover: #458588;

  color: var(--color-main);
  background-color: var(--color-main-bg);
}

#dark-light-mode {
  width: 2rem;
  background-color: var(--color-main);
}

li {
  margin: 1rem;
}

blockquote {
  padding: 1rem;
  border-bottom: 1px solid gray;
  border-top: 1px solid gray;
  margin: auto;
  margin-top: 3rem;
  margin-bottom: 3rem;
  max-width: 80%;
  color: var(--color-less-important);
  padding: .1rem;
  text-align: center;
}

pre {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  flex-direction: column;
  align-content: center;
  align-items: center;
  width: fit-content;
  margin: auto;
  min-width: 50%;
  max-width: 95%;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

code {
  background: var(--color-code-bg) !important;
  color: var(--color-main) !important;
  word-wrap: break-word;
  white-space: pre-wrap;
  padding: .1rem;

  counter-reset: line-count;
}

pre code {
  border: 1px solid var(--color-less-important);
  align-self: stretch;
  width: 100%;
}

object {
  padding: 1rem .5rem;
  width: 95%;
  min-width: 70%;
  display: block;
  margin: auto;
}

table {
  border-collapse: collapse;
  word-break: break-word;
  /* Center. */
  margin: auto;
}

figcaption {
  font-style: italic;
  font-weight: lighter;
  opacity: .8;
}

td, th {
  border: 1px solid black;
  padding: 0.5rem;
  text-align: center;
  border: 1px solid var(--color-banner-bg);
}

th {
  color: var(--color-main);
  background: var(--color-less-important);
}

h1 {
  margin: 3rem 2rem 3rem 0;
  flex-basis: 90%;
}

h2, h3, h4, h5, h6 {
  margin: 3rem 2rem 1rem 0;
}

:is(h1, h2, h3, h4, h5, h6, #banner li) > a {
  color: var(--color-main);
}

a {
  text-decoration: none !important;
  color: var(--color-link);
}

a:hover {
  text-decoration: underline !important;
  color: var(--color-link-hover) !important;
}


summary:hover {
  color: var(--color-link-hover) !important;
}


.hash-anchor {
  opacity: 0;
}

.title:hover + .hash-anchor {
  opacity: 1;
}

.hash-anchor:hover {
  opacity: 1;
}

.hash-anchor::before {
  margin-left: .5rem;
  content: '#';
}

p:has(img):has(em) {
  padding-bottom: 2.5rem;
}

#donate {
  margin-top: 8rem;
  text-align: center;
}

.line-number {
  width: 3rem;
  display: inline-block;
  text-align: right;
  padding: .2rem;
  margin-right: 1rem;
  user-select: none;
  border-right: 1px dotted black;
  padding-right: .5rem;
  color: var(--color-less-important);
  border-color: var(--color-less-important);


}

.line-number::before {
  counter-increment: line-count;
  content: counter(line-count);
}


@media only screen and (max-width: 650px) {
  .line-number { display: none; }
  code { padding-left: 0.3rem !important; }
}

details {
  border-radius: .5rem;
  margin: 0 auto;
  padding: .5rem;
}

details > pre {
}

summary {
  font-weight: bold;
}

.footnotes::before {
  content: "Footnotes:";
}

.footnotes {
  border-top: 1px solid var(--color-less-important);
  border-bottom: 1px solid var(--color-less-important);
  padding: 1rem;
  margin: 2rem 1rem;
}

/* Gruvbox colors for code */

.hljs {
  background: light-dark(#fbf1c7, #282828) !important;
}

/* Gray: gray_245 / gray_245 */
.hljs-comment,
.hljs-quote {
  color: light-dark(#928374, #928374) !important;
  font-weight: initial !important;
}

/* Red: faded_red / bright_red */
.hljs-keyword,
.hljs-selector-tag,
.hljs-addition {
  color: light-dark(#9d0006, #fb4934) !important;
  font-weight: initial !important;
}

/* Green: faded_green / bright_green */
.hljs-number,
.hljs-string,
.hljs-meta .hljs-string,
.hljs-literal,
.hljs-regexp {
  color: light-dark(#79740e, #b8bb26) !important;
  font-weight: initial !important;
}

/* Yellow: faded_yellow / bright_yellow */
.hljs-type,
.hljs-built_in,
.hljs-class,
.hljs-title,
.hljs-title.class_ {
  color: light-dark(#b57614, #fabd2f) !important;
  font-weight: initial !important;
}

/* Blue: faded_blue / bright_blue */
.hljs-variable,
.hljs-template-variable,
.hljs-attribute,
.hljs-attr,
.hljs-tag,
.hljs-name {
  color: light-dark(#076678, #83a598) !important;
  font-weight: initial !important;
}

.hljs-punctuation {
  color: light-dark(#928374, #928374) !important;
}

/* Aqua: faded_aqua / bright_aqua */
.hljs-function,
.hljs-formula,
.hljs-subst,
.hljs-selector-id,
.hljs-selector-class {
  color: light-dark(#427b58, #8ec07c) !important;
  font-weight: initial !important;
}

/* Purple: faded_purple / bright_purple */
.hljs-symbol,
.hljs-bullet,
.hljs-link,
.hljs-meta,
.hljs-selector-attr,
.hljs-selector-pseudo {
  color: light-dark(#8f3f71, #d3869b) !important;
  font-weight: initial !important;
}

/* Orange: faded_orange / bright_orange */
.hljs-deletion {
  color: light-dark(#af3a03, #fe8019) !important;
  font-weight: initial !important;
}


.toc  {
  border: 1px solid var(--color-less-important);
  border-radius: .2rem;
}


/* Prepend title counters in the TOC e.g. `3.4.1 Foobar the baz`. */
.toc ul { 
  counter-reset: section;
}

.toc li { 
  list-style-type: none;
  margin: 0.5rem;
}

.toc li::before {
  counter-increment: section;
  content: counters(section, ".") " ";
}

